k8s/develop/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xpad-apiv2-ingress
  namespace: vpd-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
    ngress.kubernetes.io/rewrite-target: /$1
    #cert-manager.io/cluster-issuer: "letsencrypt-prod"  
    #kubernetes.io/tls-acme: "true"

spec:
  rules:
    - host: dev-apiv2.vpd.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vpd-service
                port:
                  number: 3000
